--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "verbose": true
   },
   "repository": {
     "type": "git",
@@ -26,5 +29,11 @@
   "bugs": {
     "url": "https://github.com/tallen1985/10-Homework-Team-Generator/issues"
   },
-  "homepage": "https://github.com/tallen1985/10-Homework-Team-Generator#readme"
+  "homepage": "https://github.com/tallen1985/10-Homework-Team-Generator#readme",
+  "dependencies": {
+    "inquirer": "^8.2.0"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
+  }
 }
